--- a/scss/message/_metadata.scss
+++ b/scss/message/_metadata.scss
@@ -18,7 +18,11 @@
         font-weight: bold;
 
         &>.date {
-            color: var(--messageMetadataImageNoCaption);
+            color: white;
+        }
+
+        &>.padlock-icon {
+            @include color-svg('../images/padlock.svg', white, 125%);
         }
     }
 
